content and UI improvements

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Expert web developer and designer offering top-notch services to create visually stunning and user-friendly websites.">
     <meta name="keywords" content="Web development, Digital Design, Project Management, Agile Coaching, UX/UI Design">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" href="./assets/images/logoMini.webp">
     <script src="https://kit.fontawesome.com/683c4ce8a8.js" crossorigin="anonymous"></script>
     <title>Let me help you to create your dream project!</title>
 </head>
@@ -14,7 +15,7 @@
     <header class="heroBanner__index">
         <nav>
             <a href="index.html" class="navLogo">
-                <img src="./assets/images/JoseOrdoricaLogoW.png" width="150px" alt="JoseOrdorica_Logo">
+                <img src="./assets/images/JoseOrdoricaLogoW.webp" width="150px" alt="JoseOrdorica_Logo">
             </a>
             <div class="navContainer">
                 <label for="menu" class="navLabel">
@@ -45,7 +46,7 @@
         <!-- Section with image -->
             <div class="doubleSection__index">
                 <div class="imageContainer">
-                    <img src="./assets/images/pngegg (4).png" width="300px" alt="polygons">
+                    <img src="./assets/images/polys.webp" width="300px" alt="polygons">
                 </div>
                 <div>
                     <h3>Don't worry, you are in good hands.</h3>
@@ -63,11 +64,11 @@
             </div>
             <div class="tripleSection">
                 <div>
-                    <h6>About me</h6>
+                    <h5>About me</h5>
                     <p>Let me take care of the technical details and allow you to focus on other aspects of your business.</p>
                 </div>
                 <div>
-                    <h6>Sections</h6>
+                    <h5>Sections</h5>
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="./pages/about-me.html">About me</a></li>
@@ -77,7 +78,7 @@
                     </ul>
                 </div>
                 <div>
-                    <h6>Follow me on!</h6>
+                    <h5>Follow me on!</h5>
                     <ul>
                         <li><a href="#"><i class="fa-brands fa-facebook"></i> JoseOrdorica</a></li>
                         <li><a href="#"><i class="fa-brands fa-twitter"></i> JoseOrdorica</a></li>
