--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -7,14 +7,15 @@
     <meta name="description" content="Specializing in front-end and back-end development, responsive design, and e-commerce solutions.">
     <meta name="keywords" content="Web development, Digital Design, Project Management, Agile Coaching, UX/UI Design">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="icon" href="../assets/images/logoMini.webp">
     <script src="https://kit.fontawesome.com/683c4ce8a8.js" crossorigin="anonymous"></script>
     <title>Let me tell you a bit about myself...</title>
 </head>
 <body>
     <header class="heroBanner__aboutMe">
         <nav>
-            <a href="index.html" class="navLogo">
-                <img src="../assets/images/JoseOrdoricaLogoW.png" width="150px" alt="JoseOrdorica_Logo">
+            <a href="../index.html" class="navLogo">
+                <img src="../assets/images/JoseOrdoricaLogoW.webp" width="150px" alt="JoseOrdorica_Logo">
             </a>
             <div class="navContainer">
                 
@@ -32,7 +33,7 @@
             </div>
         </nav>
         <div class="bannerText">
-            <h2>Hey there!</h2> <h1>I'm José Ordorica</h1> <h2>Independent Digital Creator</h2>
+            <h1>Let's work together!</h1> <h2>I'm always eager to learn and stay up-to-date on the latest trends and technologies in web development and design.</h2>
         </div>
     </header>
     <main>
@@ -40,31 +41,31 @@
         <div class="tripleSectionIcon">
             <div>
                 <i class="fa-solid fa-hippo"></i>
-                <h5>This is a Hippo</h5>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis temporibus nisi pariatur soluta? Iure facilis saepe quod asperiores.</p>
+                <h5>Visually appealing designs</h5>
+                <p>I can help you create user-friendly websites and apps that effectively communicates your message and represents your brand.</p>
             </div>
             <div>
                 <i class="fa-solid fa-ghost"></i>
-                <h5>This is a Ghost</h5>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis temporibus nisi pariatur soluta? Iure facilis saepe quod asperiores.</p>
+                <h5>Mobile first experiences</h5>
+                    <p>I'll take care of the technical aspects of website development, such as ensuring that the site is responsive and works well on different devices.</p>
             </div>
             <div>
                 <i class="fa-solid fa-shop"></i>
-                <h5>This is a Store</h5>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis temporibus nisi pariatur soluta? Iure facilis saepe quod asperiores.</p>
+                <h5>Easy integrations</h5>
+                    <p>Building a website from scratch can be a time-consuming process. I'll make it easy for you to integrate your site with social media and other platforms.</p>
             </div>
         </div>
         <div class="singleSection">
             <h4>I can take care of the Design and the Development!</h4>
         </div>
         <!-- double column section -->
-        <div class="doubleSection">
-            <img src="../assets/images/hojas reverso.jpg" alt="imagen de hojas">
+        <div class="doubleSection__about">
+            <img src="../assets/images/polys.webp" alt="imagen de hojas">
             <div>
-                <h3>Banner title</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam commodi debitis corporis doloribus facilis officia esse magnam. Maiores, voluptates non eum error sunt, ab, animi voluptas impedit corrupti nemo praesentium.</p>
+                <h3>My path as a digital creator.</h3>
+                <p>I started my journey as a digital creator with a passion for design and technology. I pursued my education in fields such as web design, graphic design, computer science, and marketing, honing my skills through coursework and internships. I have also undertaken personal projects that have allowed me to experiment and apply my knowledge in real-world situations. Over time, I have developed a strong understanding of various aspects of digital creation, including UX/UI design, branding, marketing, and technical support.</p>
                 <div>
-                    <a class="button" href="contact.html">Contact us</a>
+                    <a class="button" href="contact.html">Contact me</a>
                 </div>
             </div>
         </div>
@@ -79,11 +80,11 @@
             </div>
             <div class="tripleSection">
                 <div>
-                    <h6>About me</h6>
+                    <h5>About me</h5>
                     <p>Let me take care of the technical details and allow you to focus on other aspects of your business.</p>
                 </div>
                 <div>
-                    <h6>Sections</h6>
+                    <h5>Sections</h5>
                     <ul>
                         <li><a href="../index.html">Home</a></li>
                         <li><a href="about-me.html">About me</a></li>
@@ -93,7 +94,7 @@
                     </ul>
                 </div>
                 <div>
-                    <h6>Follow me on!</h6>
+                    <h5>Follow me on!</h5>
                     <ul>
                         <li><a href="#"><i class="fa-brands fa-facebook"></i> JoseOrdorica</a></li>
                         <li><a href="#"><i class="fa-brands fa-twitter"></i> JoseOrdorica</a></li>
