--- a/pages/article.html
+++ b/pages/article.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="some of the top trends in web design for the year 2023.">
+    <meta name="keywords" content="Web development, Digital Design, Project Management, Agile Coaching, UX/UI Design">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="icon" href="../assets/images/logoMini.webp">
     <script src="https://kit.fontawesome.com/683c4ce8a8.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Top Trends in Web Design for 2022</title>
 </head>
 <body>
-    <header class="heroBanner__index">
+    <header class="heroBanner__article">
         <nav>
-            <a href="index.html" class="navLogo">
-                <img src="../assets/images/JoseOrdoricaLogoW.png" width="150px" alt="JoseOrdorica_Logo">
+            <a href="../index.html" class="navLogo">
+                <img src="../assets/images/JoseOrdoricaLogoW.webp" width="150px" alt="JoseOrdorica_Logo">
             </a>
             <div class="navContainer">
                 
@@ -30,20 +33,33 @@
             </div>
         </nav>
         <div class="bannerText">
-            <h2>Hey there!</h2> <h1>I'm José Ordorica</h1> <h2>Independent Digital Creator</h2>
+            <h1>Top Trends in Web Design for 2023</h1>
         </div>
     </header>
     <main>
         <!-- Article Content -->
         <div class="articleContent">
-            <h2>Article Subtitle</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati totam est corporis nesciunt aperiam dignissimos deleniti nisi alias ullam repudiandae quia delectus quidem id molestias quod minima hic quos error animi quasi ut, ab earum cumque sed! Beatae earum rerum sit magnam. Voluptate nesciunt ex praesentium libero placeat laborum, necessitatibus consequuntur quod dignissimos suscipit quidem nihil eveniet omnis odio excepturi. Eos dolorem soluta incidunt quibusdam eaque vitae magnam earum asperiores quo architecto ratione dolore nihil voluptates, autem eveniet pariatur expedita.</p>
-            <img src="../assets/images/blu1.jpg" alt="">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda, ea? Labore voluptates at corrupti dignissimos vitae dolorem dolor. Consequuntur illum aperiam corporis nihil eligendi labore dignissimos mollitia dolores eius tenetur, amet ab? Quibusdam ratione voluptatum voluptatem cum officia et ex distinctio corporis esse beatae eum expedita aliquid incidunt, accusamus eligendi rerum laborum. Illum numquam saepe temporibus animi praesentium quod odio illo incidunt aliquam, ipsum autem nisi vero quas similique et quidem, deleniti sit. Quasi architecto libero, velit fuga error asperiores.</p>
+            <h3>Web design is a constantly evolving field, with new trends emerging every year.</h3>
+            <p>In this article, we'll take a look at some of the top trends in web design for the year 2023.</p>
+
+                <h3>Bold Typography:</h3> <p>Typography is a crucial element of web design, and in 2023, we can expect to see more bold and eye-catching typefaces. Designers are using bold typography to make a statement and create impactful headers, titles, and subtitles.</p>
+                <h3>Dark Mode:</h3> <p>Dark mode is a design trend that has been growing in popularity over the past few years, and it is expected to continue in 2023. Dark mode provides a more visually engaging and usable experience for users, especially in low-light conditions. It also saves battery life on mobile devices and reduces eye strain.</p>
+                <h3>3D Elements:</h3> <p>3D elements, such as illustrations, animations, and graphics, are becoming increasingly popular in web design. 3D elements add depth and dimension to websites and help to create a more immersive user experience.</p>
+                <img src="../assets/images/hero5.webp" alt="">
+                <h3>Asymmetrical Layouts:</h3> <p>Asymmetrical layouts are becoming more popular as designers look for ways to break away from traditional symmetrical designs. Asymmetrical layouts add interest and create visual balance in a unique way, making websites stand out and look fresh.</p>
+                <h3>Interactive Elements:</h3> <p>Interactive elements, such as animations, hover effects, and microinteractions, are becoming increasingly popular in web design. Interactive elements add engagement and help to create a more immersive user experience, making websites more memorable and enjoyable to use.</p>
+                <h3>Natural Colors and Textures:</h3> <p>Natural colors and textures are becoming more popular in web design as designers look for ways to create a more organic and natural look and feel. Natural colors and textures, such as earth tones and organic patterns, help to create a calming and inviting atmosphere.</p>
+                <img src="../assets/images/blog1.webp" alt="">
+                <h3>Minimalism:</h3> <p>Minimalism is a timeless trend in web design that continues to be popular. Minimalism helps to create a clean and simple design, which is more focused on content and user experience. It also helps to create a modern and professional look that appeals to a wide audience.</p>
+                <h3>Gradients:</h3> <p>Gradients are a popular trend in web design that adds interest and depth to websites. Gradients are used to create visual interest, highlight specific areas, and create a sense of movement and depth.</p>
+                <h3>Mobile-First Design:</h3> <p>Mobile-first design is a trend that has been growing in popularity over the past few years, and it is expected to continue in 2023. Mobile-first design means that websites are designed for mobile devices first, and then adapted for larger screens. This approach helps to ensure a seamless user experience across all devices.</p>
+                <h3>Accessibility:</h3> <p>Accessibility is becoming increasingly important in web design as designers look to create websites that are usable and accessible for everyone, including those with disabilities. Accessible websites are not only compliant with laws and regulations, but they also provide a better user experience for everyone and improve reach and engagement.</p>
+                <img src="../assets/images/blog4.webp" alt="">
+                <h3>In conclusion,</h3> <p>The trends in web design for 2023 are all about creating impactful, immersive, and user-friendly experiences. Whether it's through bold typography, dark mode, 3D elements, asymmetrical layouts, interactive elements, natural colors and textures, minimalism, gradients, mobile-first design, or accessibility, the focus is on creating a design that is both aesthetically pleasing and functional. These trends will help designers to create websites that are memorable, enjoyable to use, and accessible to everyone.</p>
         </div>
-        <div class="sectionSeparator">
-            <h2>Section Title</h2>
-            <p class="restArea__p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia dolores officia error illum nulla laborum pariatur. Repellendus, atque velit! Corrupti dolor quis mollitia aut laboriosam in illo autem iste aliquam.</p>
+        <div class="singleSection__blog">
+            <h3>Liked what you read?</h3>
+            <p>I am excited to share my ideas and perspectives on various topics with a wider audience. If you own a blog and are looking for guest writers, I would be honored to contribute. I am eager to connect and collaborate with like-minded individuals in the community.</p>
         </div>
     </main>
     <!-- Footer -->
