--- a/pages/blog.html
+++ b/pages/blog.html
@@ -7,14 +7,15 @@
     <meta name="description" content="Get expert insights, tips, and tutorials on the latest technologies and trends in front-end and back-end development, responsive design, and more.">
     <meta name="keywords" content="Web development, Digital Design, Project Management, Agile Coaching, UX/UI Design">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="icon" href="../assets/images/logoMini.webp">
     <script src="https://kit.fontawesome.com/683c4ce8a8.js" crossorigin="anonymous"></script>
     <title>Blog</title>
 </head>
 <body>
     <header class="heroBanner__blog">
         <nav>
-            <a href="index.html" class="navLogo">
-                <img src="../assets/images/JoseOrdoricaLogoW.png" width="150px" alt="JoseOrdorica_Logo">
+            <a href="../index.html" class="navLogo">
+                <img src="../assets/images/JoseOrdoricaLogoW.webp" width="150px" alt="JoseOrdorica_Logo">
             </a>
             <div class="navContainer">
                 
@@ -32,7 +33,7 @@
             </div>
         </nav>
         <div class="bannerText">
-            <h2>Hey there!</h2> <h1>I'm José Ordorica</h1> <h2>Independent Digital Creator</h2>
+            <h1>These are some of my favorite thoughts</h1> <h2> Hi! I am glad to have you here. I hope you find the content on my blog informative, interesting, and enjoyable. Please feel free to leave comments or ask questions if you have any.</h2>
         </div>
     </header>
     <main>
@@ -42,43 +43,43 @@
                 <!-- Article Thumbnail -->
                 <a href="article.html"><li>
                     <div>
-                        <img src="../assets/images/hojas reverso.jpg" class="articleImage" alt="">
+                        <img src="../assets/images/blog1.webp" class="articleImage" alt="">
                     </div>
                     <div>
-                        <h2>Article Title</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure fuga atque corporis temporibus aliquam ipsam?</p>
+                        <h2>5 Tips for Creating a User-Friendly Website</h2>
+                        <p>A user-friendly website is crucial for the success of any online presence. Here are some winning way to improve yours:</p>
                     </div>
                 </li></a>
                 <!-- Article Thumbnail -->
                 <a href="article.html"><li>
-                            <img src="../assets/images/man-g6b20cbb14_1920.jpg" class="articleImage" alt="">
+                            <img src="../assets/images/blog2.webp" class="articleImage" alt="">
                             <div>
-                                <h2>Article Title</h2>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure fuga atque corporis temporibus aliquam ipsam?</p>
+                                <h2>The importance of Mobile-Responsive Design</h2>
+                                <p>Mobile-responsive design refers to the ability of a website to adapt to different screen sizes and devices, such as smartphones and tablets. Here are the reasons why it is important:</p>
                             </div>
                 </li></a>
                 <!-- Article Thumbnail -->
                 <a href="article.html"><li>
-                            <img src="../assets/images/pexels-henry-&-co-2376963.jpg" class="articleImage" alt="">
+                            <img src="../assets/images/blog3.webp" class="articleImage" alt="">
                             <div>
-                                <h2>Article Title</h2>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure fuga atque corporis temporibus aliquam ipsam?</p>
+                                <h2>Top Trends in Web Design for 2022</h2>
+                                <p>With the increasing use of smartphones and tablets to access the internet, it is essential that websites are designed to be responsive and work well on small screens.</p>
                             </div>
                 </li></a>
                 <!-- Article Thumbnail -->
                 <a href="article.html"><li>
-                            <img src="../assets/images/pexels-tara-winstead-7123050.jpg" class="articleImage" alt="">
+                            <img src="../assets/images/blog4.webp" class="articleImage" alt="">
                             <div>
-                                <h2>Article Title</h2>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure fuga atque corporis temporibus aliquam ipsam?</p>
+                                <h2>The Role of Accessibility in Web Design</h2>
+                                <p>Accessibility refers to the practice of making websites usable and accessible for people with disabilities, including visual, auditory, motor, and cognitive impairments. The role of accessibility in web design is crucial...</p>
                             </div>
                 </li></a>
             </ul>
         </div>
         <!-- Section Separator -->
         <div class="singleSection__blog">
-            <h3>Section Title</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia dolores officia error illum nulla laborum pariatur. Repellendus, atque velit! Corrupti dolor quis mollitia aut laboriosam in illo autem iste aliquam.</p>
+            <h3>Liked what you read?</h3>
+            <p>I am excited to share my ideas and perspectives on various topics with a wider audience. If you own a blog and are looking for guest writers, I would be honored to contribute. I am eager to connect and collaborate with like-minded individuals in the community.</p>
         </div>
     </main>
     <!-- Footer -->
@@ -91,11 +92,11 @@
             </div>
             <div class="tripleSection">
                 <div>
-                    <h6>About me</h6>
+                    <h5>About me</h5>
                     <p>Let me take care of the technical details and allow you to focus on other aspects of your business.</p>
                 </div>
                 <div>
-                    <h6>Sections</h6>
+                    <h5>Sections</h5>
                     <ul>
                         <li><a href="../index.html">Home</a></li>
                         <li><a href="about-me.html">About me</a></li>
@@ -105,7 +106,7 @@
                     </ul>
                 </div>
                 <div>
-                    <h6>Follow me on!</h6>
+                    <h5>Follow me on!</h5>
                     <ul>
                         <li><a href="#"><i class="fa-brands fa-facebook"></i> JoseOrdorica</a></li>
                         <li><a href="#"><i class="fa-brands fa-twitter"></i> JoseOrdorica</a></li>
