--- a/pages/demo.html
+++ b/pages/demo.html
@@ -7,14 +7,15 @@
     <meta name="description" content="Browse my portfolio of custom-designed websites and see our skills in action.">
     <meta name="keywords" content="Web development, Digital Design, Project Management, Agile Coaching, UX/UI Design">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="icon" href="../assets/images/logoMini.webp">
     <script src="https://kit.fontawesome.com/683c4ce8a8.js" crossorigin="anonymous"></script>
     <title>Discover more of my work</title>
 </head>
 <body>
     <header class="heroBanner__demo">
         <nav>
-            <a href="index.html" class="navLogo">
-                <img src="../assets/images/JoseOrdoricaLogoW.png" width="150px" alt="JoseOrdorica_Logo">
+            <a href="../index.html" class="navLogo">
+                <img src="../assets/images/JoseOrdoricaLogoW.webp" width="150px" alt="JoseOrdorica_Logo">
             </a>
             <div class="navContainer">
                 <label for="menu" class="navLabel">
@@ -31,9 +32,47 @@
             </div>
         </nav>
         <div class="bannerText">
-            <h2>Hey there!</h2> <h1>I'm José Ordorica</h1> <h2>Independent Digital Creator</h2>
+            <h1>Check out what I've been doing lately!</h1>
+            <h2> I believe that great design is at the heart of every successful online presence, and I strive to deliver just that in every project I take on. Take a look and see for yourself!</h2>
         </div>
     </header>
+    <main>
+        <!-- Article list -->
+        <div>
+            <div class="tripleSectionIcon">
+                <div class="demoCard"><a href="article.html">
+                    <img src="../assets/images/demo1.webp" alt="">
+                    <h5>UX/UI from scratch</h5>
+                    <p>From research to prototyping, I have put in a lot of effort to create a seamless and intuitive user experience. The focus has been on delivering a user-centered design solution that prioritizes the needs and goals of the end-user.</p>
+                </a></div>
+                <div class="demoCard"><a href="article.html">
+                    <img src="../assets/images/demo2.webp" alt="">
+                    <h5>Professional Brand look & feel</h5>
+                    <p>The end result is a comprehensive brand strategy that encompasses all aspects of the brand, including logo design, color palette, typography, and messaging. I believe that great branding is an essential component of a successful business.</p>
+                </a></div>
+                <div class="demoCard"><a href="article.html">
+                    <img src="../assets/images/demo3.webp" alt="">
+                    <h5>On top of industry best practices</h5>
+                    <p>This project showcases my knowledge of industry-standard best practices and my commitment to delivering high-quality work. From project management to code standards.</p>
+                </a></div>
+                <div class="demoCard"><a href="article.html">
+                    <img src="../assets/images/demo4.webp" alt="Posicionamiento por medio de SEO">
+                    <h5>Marketing funneling and SEO</h5>
+                    <p>I have applied a range of SEO best practices to improve the online presence of the business and make it more discoverable to potential customers. The end result is a website that is optimized for search engines.</p>
+                </a></div>
+                <div class="demoCard"><a href="article.html">
+                    <img src="../assets/images/demo5.webp" alt="">
+                    <h5>A/B testing and KPI tracking</h5>
+                    <p>Through a systematic approach to experimentation and analysis, I have been able to identify areas for improvement and make data-driven decisions that drive real results.</p>
+                </a></div>
+                <div class="demoCard"><a href="article.html">
+                    <img src="../assets/images/demo6.webp" alt="">
+                    <h5 >Support for Online Stores</h5>
+                    <p>Delivering top-notch support that makes a real difference for businesses and their customers. Take a look and see for yourself!</p>
+                </a></div>
+            </div>
+        </div>
+    </main>
     <footer>
         <div>
             <div>
@@ -43,11 +82,11 @@
             </div>
             <div class="tripleSection">
                 <div>
-                    <h6>About me</h6>
+                    <h5>About me</h5>
                     <p>Let me take care of the technical details and allow you to focus on other aspects of your business.</p>
                 </div>
                 <div>
-                    <h6>Sections</h6>
+                    <h5>Sections</h5>
                     <ul>
                         <li><a href="../index.html">Home</a></li>
                         <li><a href="about-me.html">About me</a></li>
@@ -57,7 +96,7 @@
                     </ul>
                 </div>
                 <div>
-                    <h6>Follow me on!</h6>
+                    <h5>Follow me on!</h5>
                     <ul>
                         <li><a href="#"><i class="fa-brands fa-facebook"></i> JoseOrdorica</a></li>
                         <li><a href="#"><i class="fa-brands fa-twitter"></i> JoseOrdorica</a></li>
