--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,14 +7,15 @@
     <meta name="description" content="Tell me about your proyect and toghether let's make it happen!">
     <meta name="keywords" content="Web development, Digital Design, Project Management, Agile Coaching, UX/UI Design">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="icon" href="../assets/images/logoMini.webp">
     <script src="https://kit.fontawesome.com/683c4ce8a8.js" crossorigin="anonymous"></script>
     <title>Get in contact!</title>
 </head>
 <body>
     <header class="heroBanner__contact">
         <nav>
-            <a href="index.html" class="navLogo">
-                <img src="../assets/images/JoseOrdoricaLogoW.png" width="150px" alt="JoseOrdorica_Logo">
+            <a href="../index.html" class="navLogo">
+                <img src="../assets/images/JoseOrdoricaLogoW.webp" width="150px" alt="JoseOrdorica_Logo">
             </a>
             <div class="navContainer">
                 
@@ -32,18 +33,18 @@
             </div>
         </nav>
         <div class="bannerText">
-            <h2>Hey there!</h2> <h1>I'm José Ordorica</h1> <h2>Independent Digital Creator</h2>
+            <h1>I'd Love to Hear From You!</h1>
         </div>
     </header>
     <main>
         <div class="singleSection">
-            <h4>This is the Contact page section</h4>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam commodi debitis corporis doloribus facilis officia esse magnam. Maiores, voluptates non eum error sunt, ab, animi voluptas impedit corrupti nemo praesentium.</p>
+            <h4>Send me a message!</h4>
+            <p>Hey there! I'd love to chat with you more. Please send me a message to continue our conversation. I'm here to help answer any questions or just chat. Let's connect!</p>
         </div>
         <!-- Contact form section-->
         <div class="doubleSection__index">
-            <div>
-                <img src="../assets/images/pngegg (4).png" alt="polygons">
+            <div class="imageContainer">
+                <img src="../assets/images/polys.webp" width="400px" alt="polygons">
             </div>
             <div>
                 <form>
@@ -55,15 +56,15 @@
                         <li><input type="text" id="lname" name="lname"></li>
                         <li><label for="email">Email:</label></li>
                         <li><input type="email" id="email" name="email"></li>
-                        <li><label for="message">Tell us about your idea:</label></li>
-                        <li><textarea name="message" id="message" cols="50" rows="5"></textarea></li>
+                        <li><label for="message">Tell me about your idea:</label></li>
+                        <li><textarea name="message" id="message" cols="40" rows="5"></textarea></li>
                         <li><input type="submit" class="button inputClear" value="Submit"></li>
                     </ul>
                 </form>
             </div>
         </div>
         <div class="singleSection__blog">
-            <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur.</h3>
+            <h3>"The best way to predict the future is to invent it." -Alan Kay</h3>
         </div>
     </main>
     <!-- Footer -->
@@ -76,11 +77,11 @@
             </div>
             <div class="tripleSection">
                 <div>
-                    <h6>About me</h6>
+                    <h5>About me</h5>
                     <p>Let me take care of the technical details and allow you to focus on other aspects of your business.</p>
                 </div>
                 <div>
-                    <h6>Sections</h6>
+                    <h5>Sections</h5>
                     <ul>
                         <li><a href="../index.html">Home</a></li>
                         <li><a href="about-me.html">About me</a></li>
@@ -90,7 +91,7 @@
                     </ul>
                 </div>
                 <div>
-                    <h6>Follow me on!</h6>
+                    <h5>Follow me on!</h5>
                     <ul>
                         <li><a href="#"><i class="fa-brands fa-facebook"></i> JoseOrdorica</a></li>
                         <li><a href="#"><i class="fa-brands fa-twitter"></i> JoseOrdorica</a></li>
